k8s.yaml
# 部署内容
# kubectl apply -f k8s.yaml
# 
# docker 环境下运行
# docker run --name fluent -v /data/fluent:/data/fluent -d ghcr.io/suisrc/k8skit:vX.Y.Z-fluent -logtoken xxx123456789 -logroute /api/logs

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: fluent
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: fluent.exp.com
      http:
        paths:
          - backend:
              service:
                name: vscode
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fluent.exp.com
      secretName: tls-fluent.exp.com

---
apiVersion: v1
kind: Service
metadata:
  name: fluent
  namespace: default
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: fluent
  # clusterIP: None
